# Image-Captioning

./: .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
configs/: default.yaml
notebooks/: base-image-captioning.ipynb  cache_features_kaggle.ipynb  train_kaggle.ipynb
scripts/: build_vocab.py  cache_features.py  download_coco.py  plot_curves.py
src/: captioner.py  config.py  evaluate.py  inference.py  train.py
src/data/: dataset.py  transforms.py  vocab.py
src/models/: decoder.py  encoder.py
tests/: test_beam.py  test_checkpoint.py  test_collate.py  test_config.py  test_decoder.py  test_encoder.py  test_vocab.py
